docs/7.52/md/abenitab_obsolete.md
---
title: "Obsolete Internal Table Processing"
description: |
  -   READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE - Short Forms(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_short_forms.htm) -   sys, Obsolete Pseudo Component(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensys_table_body.htm) -   READ TABLE ita
version: "7.52"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_obsolete.htm"
abapFile: "abenitab_obsolete.htm"
keywords: ["insert", "delete", "loop", "do", "if", "data", "internal-table", "abenitab", "obsolete"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_internal_obsolete.htm) → 

Obsolete Internal Table Processing

-   [READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE - Short Forms](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_short_forms.htm)

-   [\*sys\*, Obsolete Pseudo Component](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensys_table_body.htm)

-   [READ TABLE itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table_obsolet.htm)

-   [LOOP AT itab - TABLE LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_table_line.htm)

-   [AT field\_symbol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_itab_obsolete.htm)

-   [SORT itab BY field\_symbol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsort_itab_obsolete.htm)

-   [SEARCH itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsearch_itab.htm)

-   [WRITE TO itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to_itab.htm)

-   [PROVIDE - Short Form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_obsolete.htm)

-   [REFRESH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_itab.htm)

Continue
[READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE - Kurzformen](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_short_forms.htm)
[\*sys\*, Obsolete Pseudo Component](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensys_table_body.htm)
[READ TABLE- obsolete\_key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table_obsolet.htm)
[LOOP AT itab - TABLE LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_table_line.htm)
[AT field\_symbol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_itab_obsolete.htm)
[SORT itab BY field\_symbol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsort_itab_obsolete.htm)
[SEARCH itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsearch_itab.htm)
[WRITE TO itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to_itab.htm)
[PROVIDE - Short Form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_obsolete.htm)
[REFRESH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_itab.htm)