docs/7.57/md/abenitab_obsolete.md
---
title: "Obsolete Internal Table Processing"
description: |
  -   READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE - Short Forms(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_short_forms.htm) -   sys, Obsolete Pseudo Component(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensys_table_body.htm) -   READ TABLE ita
version: "7.57"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_obsolete.htm"
abapFile: "abenitab_obsolete.htm"
keywords: ["insert", "delete", "loop", "do", "if", "data", "internal-table", "abenitab", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_internal_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete Internal Table Processing, ABENITAB_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D
%0A%0D%0A%0D%0ASuggestion for improvement:)

Obsolete Internal Table Processing

-   [READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE - Short Forms](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_short_forms.htm)
-   [\*sys\*, Obsolete Pseudo Component](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensys_table_body.htm)
-   [READ TABLE itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapread_table_obsolet.htm)
-   [LOOP AT itab - TABLE LINE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_table_line.htm)
-   [AT field\_symbol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_itab_obsolete.htm)
-   [SORT itab BY field\_symbol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsort_itab_obsolete.htm)
-   [SEARCH itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsearch_itab.htm)
-   [WRITE TO itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapwrite_to_itab.htm)
-   [PROVIDE - Short Form](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapprovide_obsolete.htm)
-   [REFRESH](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaprefresh_itab.htm)

Continue
[READ, LOOP, INSERT, COLLECT, APPEND, MODIFY, DELETE, Short Forms](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_short_forms.htm)
[\*sys\*, Obsolete Pseudo Component](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensys_table_body.htm)
[READ TABLE, obsolete\_key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapread_table_obsolet.htm)
[LOOP AT itab, TABLE LINE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_table_line.htm)
[AT field\_symbol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_itab_obsolete.htm)
[SORT itab BY field\_symbol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsort_itab_obsolete.htm)
[SEARCH itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsearch_itab.htm)
[WRITE TO itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapwrite_to_itab.htm)
[PROVIDE, Short Form](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapprovide_obsolete.htm)
[REFRESH](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaprefresh_itab.htm)